# r-science-comment-mod

./: .gitignore  README.md  app.py  package.json  pyproject.toml  requirements.txt  training.ipynb
frontend/: app.css  form.ts  index.html  package.json  tailwind.config.js  tsconfig.json
modcom/: api.py  config.py  ml.py  models.py
models/: nb_svc.ml  simple_logistic.ml  vectorizer.ml
models/spacy_bow.ml/: meta.json
models/spacy_bow.ml/textcat/: cfg  model
models/spacy_bow.ml/vocab/: strings.json
models/spacy_ensemble.ml/textcat/: cfg
models/spacy_ensemble.ml/vocab/: strings.json
models/spacy_simple_cnn.ml/textcat/: cfg  model
models/spacy_simple_cnn.ml/vocab/: strings.json
models/spacy_textcat.ml/: meta.json
models/spacy_textcat.ml/textcat/: model
models/spacy_textcat.ml/vocab/: strings.json
notebooks/: modcom-training.ipynb  spacy_model.ipynb
templates/: base.jinja2  form.jinja2  result.jinja2
tests/: test_modcom.py
