[tool.poetry]
name = "modcom"
version = "0.1.0"
description = ""
authors = ["Arslan <rslnkrmt2552@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
spacy = "^2.3.4"
nltk = "^3.5"
scikit-learn = "^0.23.2"
fastapi = {extras = ["all"], version = "^0.62.0"}
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
