[tool.poetry]
name = "modcom"
version = "0.7.1"
description = ""
authors = ["Arslan <rslnkrmt2552@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
spacy = "^2.3.4"
scikit-learn = "^0.23.2"
fastapi = {extras = ["all"], version = "^0.62.0"}
gunicorn = "^20.0.4"
joblib = "^0.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
